--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -6,11 +6,11 @@ schema:
 dataSources:
   - kind: ethereum/contract
     name: V1Factory
-    network: xdai
+    network: kovan
     source:
-      address: '0x9232DeA84E91b49feF6b604EEA0455692FC27Ba8'
+      address: '0x0C60Cd59f42093c7489BA68BAA4d7A01f2468153'
       abi: V1Factory
-      startBlock: 10733005
+      startBlock: 14980875
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.3
@@ -34,11 +34,11 @@ dataSources:
       file: ./src/factory-mapping.ts
   - kind: ethereum/contract
     name: V2Factory
-    network: xdai
+    network: kovan
     source:
-      address: '0x124F707B3675b5fdd6208F4483C5B6a0B9bAf316'
+      address: '0xB47778d3BcCBf5e39dEC075CA5F185fc20567b1e'
       abi: V2Factory
-      startBlock: 10733005
+      startBlock: 16845360
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.3
@@ -62,11 +62,11 @@ dataSources:
       file: ./src/factory-mapping.ts
   - kind: ethereum/contract
     name: V21Factory
-    network: xdai
+    network: kovan
     source:
-      address: '0x0F50B2F3165db96614fbB6E4262716acc9F9e098'
+      address: '0x9c5d087f912e7187D9c75e90999b03FB31Ee17f5'
       abi: V21Factory
-      startBlock: 13569775
+      startBlock: 22640938
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.3
@@ -90,11 +90,11 @@ dataSources:
       file: ./src/factory-mapping.ts
   - kind: ethereum/contract
     name: MinionFactory
-    network: xdai
+    network: kovan
     source:
-      address: '0x9610389d548Ca0224aCaC40eB3241c5ED88D2479'
+      address: '0x80ec2dB292E7a6D1D5bECB80e6479b2bE048AC98'
       abi: MinionFactory
-      startBlock: 13569739
+      startBlock: 22640617
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.3
@@ -115,11 +115,11 @@ dataSources:
       file: ./src/minion-factory-mapping.ts
   - kind: ethereum/contract
     name: UberMinionFactory
-    network: xdai
+    network: kovan
     source:
-      address: '0xf5106077892992B84c33C35CA8763895eb80B298'
+      address: '0x03042577463E3820F9cA6Ca3906BAad599ba9382'
       abi: UberMinionFactory
-      startBlock: 14958440
+      startBlock: 23861045
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.3
@@ -139,7 +139,7 @@ dataSources:
 templates:
   - kind: ethereum/contract
     name: MolochV1Template
-    network: xdai
+    network: kovan
     source:
       abi: V1Moloch
     mapping:
@@ -183,7 +183,7 @@ templates:
           handler: handleUpdateDelegateKey
   - kind: ethereum/contract
     name: MolochV2Template
-    network: xdai
+    network: kovan
     source:
       abi: V2Moloch
     mapping:
@@ -242,7 +242,7 @@ templates:
           handler: handleTokensCollected
   - kind: ethereum/contract
     name: MolochV21Template
-    network: xdai
+    network: kovan
     source:
       abi: V21Moloch
     mapping:
@@ -296,7 +296,7 @@ templates:
           handler: handleTokensCollected
   - kind: ethereum/contract
     name: UberhausMinionTemplate
-    network: xdai
+    network: kovan
     source:
       abi: UberhausMinion
     mapping:
