--- a/manifests/uberhausMinion-template.yaml
+++ b/manifests/uberhausMinion-template.yaml
@@ -19,3 +19,5 @@ mapping:
       handler: handleSetUberHaus
     - event: "DelegateAppointed(uint256,address,address)"
       handler: handleDelegateAppointed
+    - event: "Impeachment(address,address)"
+      handler: handleImpeachment
