--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -307,6 +307,7 @@ templates:
       entities:
         - Moloch
         - Minion
+        - Proposal
       abis:
         - name: UberhausMinion
           file: ./abis/UberhausMinion.json
@@ -317,3 +318,5 @@ templates:
           handler: handleDelegateAppointed
         - event: 'Impeachment(address,address)'
           handler: handleImpeachment
+        - event: 'ExecuteAction(uint256,address)'
+          handler: handleExecuteAction
