new nifty factory

--- a/manifests/niftyMinionFactory-ds.yaml
+++ b/manifests/niftyMinionFactory-ds.yaml
@@ -16,6 +16,6 @@ mapping:
     - name: NiftyMinionFactory
       file: ./abis/NiftyMinionFactory.json
   eventHandlers:
-    - event: "SummonMinion(indexed address,indexed address,string,string)"
+    - event: "SummonMinion(indexed address,indexed address,string,string,uint256)"
       handler: handleSummonedNiftyMinion
   file: ./src/nifty-minion-factory-mapping.ts
