--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 odyssy-automaton/daohaus"
   },
   "dependencies": {
-    "@graphprotocol/graph-cli": "0.17.1",
-    "@graphprotocol/graph-ts": "0.17.0",
+    "@graphprotocol/graph-ts": "^0.20.0",
     "js-yaml": "^3.13.1",
     "minimist": "^1.2.5"
   }
