--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -13,7 +13,7 @@ dataSources:
       startBlock: 6494343
     mapping:
       kind: ethereum/events
-      apiVersion: 0.0.3
+      apiVersion: 0.0.4
       language: wasm/assemblyscript
       entities:
         - Register
@@ -41,7 +41,7 @@ dataSources:
       startBlock: 6494329
     mapping:
       kind: ethereum/events
-      apiVersion: 0.0.3
+      apiVersion: 0.0.4
       language: wasm/assemblyscript
       entities:
         - Register
@@ -69,7 +69,7 @@ dataSources:
       startBlock: 7771115
     mapping:
       kind: ethereum/events
-      apiVersion: 0.0.3
+      apiVersion: 0.0.4
       language: wasm/assemblyscript
       entities:
         - Register
@@ -97,7 +97,7 @@ dataSources:
       startBlock: 7737496
     mapping:
       kind: ethereum/events
-      apiVersion: 0.0.3
+      apiVersion: 0.0.4
       language: wasm/assemblyscript
       entities:
         - Moloch
@@ -122,7 +122,7 @@ dataSources:
       startBlock: 8402027
     mapping:
       kind: ethereum/events
-      apiVersion: 0.0.3
+      apiVersion: 0.0.4
       language: wasm/assemblyscript
       entities:
         - Moloch
@@ -147,7 +147,7 @@ dataSources:
       startBlock: 8541482
     mapping:
       kind: ethereum/events
-      apiVersion: 0.0.3
+      apiVersion: 0.0.4
       language: wasm/assemblyscript
       entities:
         - Moloch
@@ -160,6 +160,30 @@ dataSources:
           handler: handleSummonedSuperfluidMinion
       file: ./src/superfluid-minion-factory-mapping.ts
   - kind: ethereum/contract
+    name: EscrowMinion
+    network: rinkeby
+    source:
+      address: '0x7E6D03ACF2aCBc78894b706e2CbDC4ab6891c914'
+      abi: EscrowMinion
+      startBlock: 9006670
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.4
+      language: wasm/assemblyscript
+      entities:
+        - Moloch
+        - Proposal
+      abis:
+        - name: EscrowMinion
+          file: ./abis/EscrowMinion.json
+      eventHandlers:
+        - event: >-
+            ProposeAction(uint256,address,address,address[],uint256[10],uint256[10],uint256[10],address)
+          handler: handleProposeAction
+        - event: 'ExecuteAction(uint256,address,address)'
+          handler: handleExecuteAction
+      file: ./src/escrow-minion-mapping.ts
+  - kind: ethereum/contract
     name: NeopolitanMinionFactory
     network: rinkeby
     source:
@@ -168,7 +192,7 @@ dataSources:
       startBlock: 8982487
     mapping:
       kind: ethereum/events
-      apiVersion: 0.0.3
+      apiVersion: 0.0.4
       language: wasm/assemblyscript
       entities:
         - Moloch
@@ -188,7 +212,7 @@ templates:
       abi: V1Moloch
     mapping:
       kind: ethereum/events
-      apiVersion: 0.0.3
+      apiVersion: 0.0.4
       language: wasm/assemblyscript
       file: ./src/v1-mapping.ts
       entities:
@@ -232,7 +256,7 @@ templates:
       abi: V2Moloch
     mapping:
       kind: ethereum/events
-      apiVersion: 0.0.3
+      apiVersion: 0.0.4
       language: wasm/assemblyscript
       file: ./src/v2-mapping.ts
       entities:
@@ -291,7 +315,7 @@ templates:
       abi: V21Moloch
     mapping:
       kind: ethereum/events
-      apiVersion: 0.0.3
+      apiVersion: 0.0.4
       language: wasm/assemblyscript
       file: ./src/v2-mapping.ts
       entities:
@@ -345,7 +369,7 @@ templates:
       abi: SuperfluidMinion
     mapping:
       kind: ethereum/events
-      apiVersion: 0.0.3
+      apiVersion: 0.0.4
       language: wasm/assemblyscript
       file: ./src/superfluid-minion-mapping.ts
       entities:
@@ -371,7 +395,7 @@ templates:
       abi: NeopolitanMinion
     mapping:
       kind: ethereum/events
-      apiVersion: 0.0.3
+      apiVersion: 0.0.4
       language: wasm/assemblyscript
       file: ./src/neopolitan-minion-mapping.ts
       entities:
