renames neapolitan minion

--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -184,11 +184,11 @@ dataSources:
           handler: handleExecuteAction
       file: ./src/escrow-minion-mapping.ts
   - kind: ethereum/contract
-    name: NeopolitanMinionFactory
+    name: NeapolitanMinionFactory
     network: rinkeby
     source:
       address: '0x90311d4030a3756c75E707bE60542cAF6f391c2C'
-      abi: NeopolitanMinionFactory
+      abi: NeapolitanMinionFactory
       startBlock: 8982487
     mapping:
       kind: ethereum/events
@@ -198,12 +198,12 @@ dataSources:
         - Moloch
         - Minion
       abis:
-        - name: NeopolitanMinionFactory
-          file: ./abis/NeopolitanMinionFactory.json
+        - name: NeapolitanMinionFactory
+          file: ./abis/NeapolitanMinionFactory.json
       eventHandlers:
         - event: 'SummonMinion(indexed address,indexed address,string,string,uint256)'
-          handler: handleSummonedNeopolitanMinion
-      file: ./src/neopolitan-minion-factory-mapping.ts
+          handler: handleSummonedNeapolitanMinion
+      file: ./src/neapolitan-minion-factory-mapping.ts
 templates:
   - kind: ethereum/contract
     name: MolochV1Template
@@ -389,22 +389,22 @@ templates:
         - event: ActionCanceled(uint256)
           handler: handleStreamProposalCanceled
   - kind: ethereum/contract
-    name: NeopolitanMinionTemplate
+    name: NeapolitanMinionTemplate
     network: rinkeby
     source:
-      abi: NeopolitanMinion
+      abi: NeapolitanMinion
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.4
       language: wasm/assemblyscript
-      file: ./src/neopolitan-minion-mapping.ts
+      file: ./src/neapolitan-minion-mapping.ts
       entities:
         - Moloch
         - Minion
         - Proposal
       abis:
-        - name: NeopolitanMinion
-          file: ./abis/NeopolitanMinion.json
+        - name: NeapolitanMinion
+          file: ./abis/NeapolitanMinion.json
       eventHandlers:
         - event: >-
             ProposeAction(indexed bytes32,indexed
