--- a/manifests/neapolitanMinion-template.yaml
+++ b/manifests/neapolitanMinion-template.yaml
@@ -1,20 +1,20 @@
 kind: ethereum/contract
-name: NeopolitanMinionTemplate
+name: NeapolitanMinionTemplate
 network:
 source:
-  abi: NeopolitanMinion
+  abi: NeapolitanMinion
 mapping:
   kind: ethereum/events
   apiVersion: 0.0.3
   language: wasm/assemblyscript
-  file: ./src/neopolitan-minion-mapping.ts
+  file: ./src/neapolitan-minion-mapping.ts
   entities:
     - Moloch
     - Minion
     - Proposal
   abis:
-    - name: NeopolitanMinion
-      file: ./abis/NeopolitanMinion.json
+    - name: NeapolitanMinion
+      file: ./abis/NeapolitanMinion.json
   eventHandlers:
     - event: "ProposeAction(indexed bytes32,indexed uint256,uint256,address,uint256,bytes)"
       handler: handleProposeAction
