--- a/manifests/neapolitanMinionFactory-ds.yaml
+++ b/manifests/neapolitanMinionFactory-ds.yaml
@@ -1,9 +1,9 @@
 kind: ethereum/contract
-name: NeopolitanMinionFactory
+name: NeapolitanMinionFactory
 network:
 source:
   address: ""
-  abi: NeopolitanMinionFactory
+  abi: NeapolitanMinionFactory
   startBlock:
 mapping:
   kind: ethereum/events
@@ -13,9 +13,9 @@ mapping:
     - Moloch
     - Minion
   abis:
-    - name: NeopolitanMinionFactory
-      file: ./abis/NeopolitanMinionFactory.json
+    - name: NeapolitanMinionFactory
+      file: ./abis/NeapolitanMinionFactory.json
   eventHandlers:
     - event: "SummonMinion(indexed address,indexed address,string,string,uint256)"
-      handler: handleSummonedNeopolitanMinion
-  file: ./src/neopolitan-minion-factory-mapping.ts
+      handler: handleSummonedNeapolitanMinion
+  file: ./src/neapolitan-minion-factory-mapping.ts
